[package]
name = "vl53l5cx_uld"   # name matters; shows in the parent 'Cargo.toml'
edition = "2021"
rust-version = "1.80"
    # 1.80: checks for validity of configuration names
    # 1.77.0 provides `cargo::` syntax for build script output instructions
publish = false

# Profiles are important (for compilation speed); they deserve to be up here!
#   tbd. should we have profiles in a lib crate?  What is their relationship to a higher one?
#
# Defaults -> https://doc.rust-lang.org/cargo/reference/profiles.html?highlight=incremental#dev
#[profile.dev]
#opt-level = "z"
## 1: "basic" optimizations
#overflow-checks = false     # disable integer overflow checks
#panic = "abort"

# 'esp-hal' recommends only using 'release', so...
# Defaults -> https://doc.rust-lang.org/cargo/reference/profiles.html?highlight=incremental#release
[profile.release]
#debug         = "line-tables-only"     # gives "WARN probe_rs::util::rtt: Insufficient DWARF info; compile your program with `debug = 2` to enable location info."
debug = 2
#debug-assertions = true     # since we .. kind-of only live in the 'release'
#codegen-units = 1      # LLVM can perform better optimizations using a single thread
codegen-units = 4
opt-level     = "s"     # optimize for binary size, but keep loop vectorization enabled
panic = "abort"
lto           = "thin"  # "can produce better optimized code, using whole-program analysis, at the cost of longer linking time."
                        #   - thin: "similar to “fat”, but takes substantially less time to run [...]"

[dependencies]
defmt           = { version = "0.3.8", optional = true }
strum           = { version = "0.26.3", default-features = false, features = ["derive"] }

[dev-dependencies]
assert_cfg      = "0.1.0"
defmt-rtt       = { version = "0.4.1" }
esp-backtrace   = { version = "0.14.0", features = ["exception-handler", "panic-handler", "defmt", "esp32c3"] }
esp-hal         = { version = "0.20.1", features = ["defmt", "esp32c3"] }     # "embedded-hal", "async"
#esp-hal-smartled    = { version = "0.12.0", features = ["esp32c3"] }

[build-dependencies]
esp-build       = "0.1.0"
itertools       = "0.13.0"

# C compile-time features
#
# Note: The names reflect the C side #define's (except for being lower case)
#
# Features define what fields are available in the ranging output. They actually drive the C library compilation.
# More fields means more I2C comms and more code size, so you will benefit from keeping the list tight.
#
# NOTE:
#   Some features are connected to others. We check this in 'build.rs'.
#
[features]
ambient_per_spad=[]     # VL53L5CX_DISABLE_AMBIENT_PER_SPAD
nb_spads_enabled=[]     # VL53L5CX_DISABLE_NB_SPADS_ENABLED
signal_per_spad=[]      # VL53L5CX_DISABLE_SIGNAL_PER_SPAD
range_sigma_mm=[]       # VL53L5CX_DISABLE_RANGE_SIGMA_MM
distance_mm=[]          # VL53L5CX_DISABLE_DISTANCE_MM
reflectance_percent=[]  # VL53L5CX_DISABLE_REFLECTANCE_PERCENT
#motion_indicator=[]     # VL53L5CX_DISABLE_MOTION_INDICATOR

# These are suggested to be always enabled, by the vendor
target_status = []      # VL53L5CX_DISABLED_TARGET_STATUS
nb_targets_detected=[]  # VL53L5CX_DISABLE_NB_TARGET_DETECTED

targets_per_zone_1=[]
targets_per_zone_2=[]
targets_per_zone_3=[]
targets_per_zone_4=[]

defmt = [
    "dep:defmt"
]

default = ["target_status", "nb_targets_detected"]

# Having 'required-features' stops compilation, in case some features wouldn't be declared. However, we also check
# this in the compiles, so having the examples listed here is .. just giving the errors slightly faster.
#
[[example]]
name = "matrix"
required-features = ["defmt", "targets_per_zone_1", "distance_mm"]
