[package]
name = "vl53l5cx_uld"   # name matters; shows in the parent 'Cargo.toml'
edition = "2021"
rust-version = "1.80"
    # 1.80: checks for validity of configuration names
    # 1.77.0 provides `cargo::` syntax for build script output instructions
publish = false

# Profiles are important (for compilation speed); they deserve to be up here!
#   tbd. should we have profiles in a lib crate?  What is their relationship to a higher one?
#
# Defaults -> https://doc.rust-lang.org/cargo/reference/profiles.html?highlight=incremental#dev
#[profile.dev]
#opt-level = "z"
## 1: "basic" optimizations
#overflow-checks = false     # disable integer overflow checks
#panic = "abort"

# 'esp-hal' recommends only using 'release', so...
# Defaults -> https://doc.rust-lang.org/cargo/reference/profiles.html?highlight=incremental#release
[profile.release]
#debug         = "line-tables-only"  # not enough for RTT: << WARN probe_rs::util::rtt: Insufficient DWARF info; compile your program with `debug = 2` to enable location info. <<
debug = 2
#debug-assertions = true     # since we .. kind-of only live in the 'release'
#codegen-units = 1      # LLVM can perform better optimizations using a single thread
codegen-units = 16
opt-level     = "s"     # optimize for binary size, but keep loop vectorization enabled
panic         = "unwind"    # drops upper scope vars, e.g. stopping an ongoing scan, which may be nice
lto           = "thin"  # "can produce better optimized code, using whole-program analysis, at the cost of longer linking time."
                        #   - thin: "similar to “fat”, but takes substantially less time to run [...]"

[dependencies]
defmt           = { version = "0.3.8", optional = true }
strum           = { version = "0.26.3", default-features = false, features = ["derive"] }

[dev-dependencies]
anyhow          = { version = "1.0.89", default-features = false }
assert_cfg      = "0.1.0"
defmt-rtt       = { version = "0.4.1" }
esp-backtrace   = { version = "0.14.1", features = ["exception-handler", "panic-handler", "defmt", "esp32c6"] }
#esp-hal         = { version = "0.20.1", features = ["defmt", "esp32c6"] }     # "async"
esp-hal         = { git = "https://github.com/esp-rs/esp-hal.git", features = ["defmt", "esp32c6"] }     # "async"; use "next-api" feature
#esp-hal-smartled    = { version = "0.12.0", features = ["esp32c6"] }
esp-println     = { version = "0.11.0", default-features = false, features = ["uart", "esp32c6"] }
fugit           = { version = "0.3.7", features = ["defmt"] }
    # merely adding this (with the 'defmt' feature), causes 'esp-hal's use of 'Instant' and 'Duration' to derive 'Format'.
semihosting     = { version = "0.1.15" }     # "args"

[build-dependencies]
anyhow          = "1.0.89"
itertools       = "0.13.0"
serde           = { version = "1.0.210", features = ["derive"] }
toml            = "0.8.19"

# C compile-time features
#
# Note: The names reflect the C side #define's (except for being lower case)
#
# Features define what fields are available in the ranging output. They actually drive the C library compilation.
# More fields means more I2C comms and more code size, so you will benefit from keeping the list tight.
#
# NOTE:
#   Some features are connected to others. We check this in 'build.rs'.
#
[features]
ambient_per_spad=[]     # VL53L5CX_DISABLE_AMBIENT_PER_SPAD
nb_spads_enabled=[]     # VL53L5CX_DISABLE_NB_SPADS_ENABLED
signal_per_spad=[]      # VL53L5CX_DISABLE_SIGNAL_PER_SPAD
range_sigma_mm=[]       # VL53L5CX_DISABLE_RANGE_SIGMA_MM
distance_mm=[]          # VL53L5CX_DISABLE_DISTANCE_MM
reflectance_percent=[]  # VL53L5CX_DISABLE_REFLECTANCE_PERCENT

# These are suggested to be always enabled, by the vendor
target_status = []      # VL53L5CX_DISABLED_TARGET_STATUS
nb_targets_detected=[]  # VL53L5CX_DISABLE_NB_TARGET_DETECTED

# The code always compiles for at least 1 "target per zone" (how many objects can be detected, in the same conical zone).
# If you want to see more, enable these:
targets_per_zone_2=[]
targets_per_zone_3=[]
targets_per_zone_4=[]

defmt = ["dep:defmt"]

# Was thought to be used with 'set-address', but since we don't set addresses.. not needed.
#|# Enable to try 'semihosting' 'args' feature, which IS EXPERIMENTAL. It likely works, but probe-rs doesn't like it.
#|# Without this, we do a work-around.
#|semihosting_args = [ "semihosting/args" ]

# Use latest 'esp-hal' API; i.e. pull the library from GitHub (> 0.20.1)
#next_api = []

default = ["target_status", "nb_targets_detected"]

# Having 'required-features' stops compilation, in case some features wouldn't be declared. However, we also check
# this in the compiles, so having the examples listed here is .. just giving the errors slightly faster.
#
[[example]]
name = "m3"
required-features = ["defmt", "distance_mm"]   # + "targets_per_zone_{2..4}"

[[example]]
name = "flock"
required-features = ["defmt", "distance_mm"]
