[package]
name = "comms-ble"
edition = "2021"
rust-version = "1.80"
publish = false

# 'esp-hal' recommends only using 'release', so...
# Defaults -> https://doc.rust-lang.org/cargo/reference/profiles.html?highlight=incremental#release
[profile.release]
debug = 2
#debug-assertions = true     # since we .. kind-of only live in the 'release'
#codegen-units = 1      # LLVM can perform better optimizations using a single thread
codegen-units = 16
opt-level     = "s"     # optimize for binary size, but keep loop vectorization enabled
#panic         = "unwind"    # drops upper scope vars, e.g. stopping an ongoing scan, which may be nice
panic       = "abort"
lto           = "thin"  # "can produce better optimized code, using whole-program analysis, at the cost of longer linking time."
                        #   - thin: "similar to “fat”, but takes substantially less time to run [...]"

[dev-dependencies]
bt-hci          = { version = "0.1.2", features = ["defmt"] }
defmt           = { version = "0.3.10" }
defmt-rtt       = { version = "0.4.1" }
embassy-executor = { version = "0.6.3", features=["task-arena-size-65536"] }     # task area size can be overridden by an env.var.
embassy-futures = { version = "0.1.1" }
embassy-sync    = { version = "0.6.1" }    # used via '#[gatt_server]'
embassy-time    = { version = "0.3.2", features = ["generic-queue-8", "defmt"] }
esp-alloc       = { version = "0.5.0" }
#esp-alloc       = { git = "https://github.com/esp-rs/esp-hal.git" }
    # ^-- Enable this if using GitHub 'main' for esp-{hal|hal-embassy|wifi}
    #       >> the `#[global_allocator]` in esp_alloc conflicts with global allocator in: esp_alloc
esp-backtrace   = { version = "0.14.2", features = ["exception-handler", "panic-handler", "defmt", "esp32c3"] }
esp-hal         = { version = "0.22.0", features = ["defmt", "esp32c3"] }
#esp-hal         = { git = "https://github.com/esp-rs/esp-hal.git", features = ["defmt", "esp32c3"] }
esp-hal-embassy = { version = "0.5.0", features = ["defmt", "esp32c3"] }
#esp-hal-embassy = { git = "https://github.com/esp-rs/esp-hal.git", features = ["defmt", "esp32c3"] }
esp-wifi = { version = "0.11.0" , features = ["ble", "defmt", "esp32c3"]}
#esp-wifi        = { git = "https://github.com/esp-rs/esp-hal.git", features = ["ble", "defmt", "esp32c3"] }
rand            = {  version = "0.8.5", features = [], default-features = false }
static_cell     = { version = "2.1.0" }
trouble-host    = { git = "https://github.com/embassy-rs/trouble", features = ["derive", "peripheral", "gatt", "defmt"], default-features = false }

[features]
# Q: Where does randomness of the address matter?  Should this default to stable, or random address?
random_address = []

default = []

# Having 'required-features' stops compilation, in case some features wouldn't be declared.
#
#[[example]]
#name = "bas-emb"
#required-features = ["defmt"]

[[example]]
name = "custom-emb"
required-features = []
