[package]
name = "flock"
edition = "2021"
rust-version = "1.80"
    # 1.80 checks for validity of configuration names
    # 1.77 provides `cargo::` syntax for build script output instructions
publish = false

# 'esp-hal' recommends only using 'release', so...
# Defaults -> https://doc.rust-lang.org/cargo/reference/profiles.html?highlight=incremental#release
[profile.release]
#debug         = "line-tables-only"  # not enough for RTT: << WARN probe_rs::util::rtt: Insufficient DWARF info; compile your program with `debug = 2` to enable location info. <<
debug = 2
#debug-assertions = true     # since we .. kind-of only live in the 'release'
#codegen-units = 1      # LLVM can perform better optimizations using a single thread
codegen-units = 16
opt-level     = "s"     # optimize for binary size, but keep loop vectorization enabled
panic         = "unwind"    # drops upper scope vars, e.g. stopping an ongoing scan, which may be nice
lto           = "thin"  # "can produce better optimized code, using whole-program analysis, at the cost of longer linking time."
                        #   - thin: "similar to “fat”, but takes substantially less time to run [...]"

[dependencies]
defmt           = { version = "0.3.8", optional = true }
#esp-hal         = { version = "0.20.1", features = ["esp32c6"] }     # "defmt", "async"
esp-hal         = { git = "https://github.com/esp-rs/esp-hal.git", features = ["esp32c6"] }     # "defmt", "async"; use "next-api" feature
vl53l5cx_uld    = { path = "../../vl53l5cx_uld", features = ["target_status"] }     # "defmt"

[dev-dependencies]
anyhow          = { version = "1.0.89", default-features = false }
defmt-rtt       = { version = "0.4.1" }
esp-backtrace   = { version = "0.14.1", features = ["exception-handler", "panic-handler", "defmt", "esp32c6"] }
fugit           = { version = "0.3.7", features = ["defmt"] }
    # merely adding this (with the 'defmt' feature), causes 'esp-hal's use of 'Instant' and 'Duration' to derive 'Format'.
semihosting     = { version = "0.1.15" }     # "args"

[build-dependencies]
anyhow          = "1.0.89"
itertools       = "0.13.0"
serde           = { version = "1.0.210", features = ["derive"] }
toml            = "0.8.19"

# ULD C compile-time features
#
# These are reflected further to 'vl53l5cx_uld'
#
[features]
ambient_per_spad=   ["vl53l5cx_uld/ambient_per_spad"]
nb_spads_enabled=   ["vl53l5cx_uld/nb_spads_enabled"]
signal_per_spad=    ["vl53l5cx_uld/signal_per_spad"]
range_sigma_mm=     ["vl53l5cx_uld/range_sigma_mm"]
distance_mm=        ["vl53l5cx_uld/distance_mm"]
reflectance_percent= ["vl53l5cx_uld/reflectance_percent"]

# For more than 1 "target per zone":
targets_per_zone_2= ["vl53l5cx_uld/targets_per_zone_2"]
targets_per_zone_3= ["vl53l5cx_uld/targets_per_zone_2"]
targets_per_zone_4= ["vl53l5cx_uld/targets_per_zone_2"]

defmt = ["dep:defmt", "vl53l5cx_uld/defmt", "esp-hal/defmt"]

default = []

# Having 'required-features' stops compilation, in case some features wouldn't be declared. However, we also check
# this in the compiles, so having the examples listed here is .. just giving the errors slightly faster.
#
[[example]]
name = "flock"
required-features = ["defmt", "distance_mm"]
